--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                     <h3><i class="fas fa-calculator"></i> Simulation</h3>
                     <div class="skills-list">
                         <div class="skill-item">
-                            <span>ANSYS</span>
+                            <span>ANSYS CFD</span>
                             <div class="skill-bar"><div class="skill-progress" data-width="80"></div></div>
                         </div>
                         <div class="skill-item">
-                            <span>Abaqus</span>
+                            <span>ANSYS Structural</span>
                             <div class="skill-bar"><div class="skill-progress" data-width="75"></div></div>
                         </div>
                         <div class="skill-item">
@@ -207,7 +207,7 @@
                         <p>Sustainable 3D printing solution turning waste PET bottles into usable filament.</p>
                         <div class="project-tags">
                             <span>Fusion 360</span>
-                            <span>Arduino</span>
+                            <!-- <span>Arduino</span> -->
                             <span>ANSYS</span>
                             <span>Sustainability</span>
                         </div>
@@ -268,7 +268,7 @@
                         <h3>Computer-Controlled 2D Pen Plotter</h3>
                         <p>DIY XY plotter that brings sketches to life using stepper motors and G-code.</p>
                         <div class="project-tags">
-                            <span>Arduino</span>
+                            <!-- <span>Arduino</span> -->
                             <span>GRBL</span>
                             <span>CNC</span>
                             <span>3D Printing</span>
@@ -624,7 +624,7 @@
                     <div class="cert-icon">
                         <i class="fas fa-microchip"></i>
                     </div>
-                    <h3>Arduino Programming</h3>
+                    <!-- <h3>Arduino Programming</h3> -->
                     <p>IoT & Mechatronics</p>
                 </div>
             </div>
