--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <a href="#contact" class="btn btn-secondary">Get In Touch</a>
             </div>
             <div class="social-links">
-                <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                <a href="mailto:joshua@example.com" class="social-link"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/joshua-joel7" class="social-link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/JoshuaJoel724" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="mailto:joshuajoel724@gmail.com" class="social-link"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <div class="scroll-indicator">
@@ -706,7 +706,7 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>joshua@example.com</span>
+                            <span>joshuajoel724@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
@@ -744,8 +744,8 @@
                     <p>&copy; 2025 Joshua Joel. Built with passion for engineering and innovation.</p>
                 </div>
                 <div class="footer-social">
-                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/joshua-joel7" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/JoshuaJoel724" class="social-link"><i class="fab fa-github"></i></a>
                     <a href="mailto:joshuajoel724@gmail.com" class="social-link"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
